feat: structure person form into sections
